# Thumbboard

./: .gitignore  Project.css  main.cpp
Thumbboard/: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  README.md  meson.build  meson_options.txt
Thumbboard/.github/workflows/: ci.yml
Thumbboard/docs/: ARCHITECTURE.md  GUI.md  ROADMAP.md
Thumbboard/docs/adr/: 0001-wayland-protocol.md  0002-renderer.md  0003-gamepad-library.md  0004-layout-style.md  0005-surface-backend.md  0006-internationalization.md
Thumbboard/protocols/: meson.build
Thumbboard/src/: main.cpp  meson.build
Thumbboard/src/app/: daemon.cpp  daemon.hpp
Thumbboard/src/render/: egl_context.cpp  egl_context.hpp
Thumbboard/src/wayland/: layer_shell_surface.cpp  layer_shell_surface.hpp  surface.hpp  wayland_client.cpp  wayland_client.hpp
